more work on discussion

--- a/manuscript/references.bib
+++ b/manuscript/references.bib
@@ -478,4 +478,57 @@ Publisher: Nature Publishing Group},
   publisher={Elsevier}
 }
 
+@article{zhang2018astral,
+  title={ASTRAL-III: polynomial time species tree reconstruction from partially resolved gene trees},
+  author={Zhang, Chao and Rabiee, Maryam and Sayyari, Erfan and Mirarab, Siavash},
+  journal={BMC bioinformatics},
+  volume={19},
+  number={6},
+  pages={15--30},
+  year={2018},
+  publisher={BioMed Central}
+}
 
+@article{liu2010maximum,
+  title={A maximum pseudo-likelihood approach for estimating species trees under the coalescent model},
+  author={Liu, Liang and Yu, Lili and Edwards, Scott V},
+  journal={BMC evolutionary biology},
+  volume={10},
+  number={1},
+  pages={1--18},
+  year={2010},
+  publisher={BioMed Central}
+}
+
+@article{zhang2016genome,
+  title={Genome-wide introgression among distantly related Heliconius butterfly species},
+  author={Zhang, Wei and Dasmahapatra, Kanchon K and Mallet, James and Moreira, Gilson RP and Kronforst, Marcus R},
+  journal={Genome biology},
+  volume={17},
+  number={1},
+  pages={1--15},
+  year={2016},
+  publisher={BioMed Central}
+}
+
+@article{kelleher2019inferring,
+  title={Inferring whole-genome histories in large population datasets},
+  author={Kelleher, Jerome and Wong, Yan and Wohns, Anthony W and Fadil, Chaimaa and Albers, Patrick K and McVean, Gil},
+  journal={Nature genetics},
+  volume={51},
+  number={9},
+  pages={1330--1338},
+  year={2019},
+  publisher={Nature Publishing Group}
+}
+
+@article{speidel2019method,
+  title={A method for genome-wide genealogy estimation for thousands of samples},
+  author={Speidel, Leo and Forest, Marie and Shi, Sinan and Myers, Simon R},
+  journal={Nature genetics},
+  volume={51},
+  number={9},
+  pages={1321--1329},
+  year={2019},
+  publisher={Nature Publishing Group}
+}
