--- a/manuscript/waiting-distances.tex
+++ b/manuscript/waiting-distances.tex
@@ -2384,7 +2384,7 @@ A primary result of our work is demonstrating the mechanistic link between speci
 %parameters and the length of genomic intervals that represent a single genealogy. 
 %Because of low levels of incomplete lineage sorting, highly 
 structured models might have much longer waiting distances than single-population models. 
-Previously the expected linkage in phylogenetic datasets could only be computed
+Previously, the expected linkage in phylogenetic datasets could only be computed
 through exhaustive simulations (e.g., \citep{mckenzie_multispecies_2020}. With our analytical results it is clear how 
 in addition to MSC parameters of divergence times and effective population sizes, 
 other factors can also clearly affect the expected distances until genealogy changes. These factors include 
@@ -2408,7 +2408,7 @@ represent a single genetic history and that they are completely unlinked. In
 reality, under a neutral model, species tree parameters and recombination 
 rates will influence the degree of genealogical turnover along a chromosome, 
 potentially resulting in linked loci and/or multiple genealogical topologies 
-per locus. Therefore, not accounting for recombination might mislead summary statistics methods (CITE ASTRAL, MP-EST). 
+per locus. Therefore, not accounting for recombination might mislead summary statistics methods \citep{liu2010maximum,gatesy_concatenation_2013,zhang2018astral}. 
 Methods have been designed to account for this by operating directly on SNP frequencies \citep{bryant2012inferring,chifman2014quartet,vachaspati2018svdquest}, 
 but we propose that incorporating the rates of turnover observed in the data as 
 information could actually offer useful new information for inferring the species tree 
@@ -2417,29 +2417,50 @@ model that generated it.
 
 %Inference of genealogies along a chromosome is a common goal in population genetics, and similar efforts have been undertaken in phylogenetics. Often, the goal of such efforts is to detect signals of introgression or selection. However, the phylogenetic approaches usually do not explicitly incorporate a model for recombination \citep[e.g.,][]{li2019recombination}. A notable exception to this is ARGweaver-D, which accepts models with population divergence and migration event parameters. Rather than derive probabilities of sequences of genealogical trees, ARGweaver-D uses an MCMC to sample the sequences. This approach is a powerful extension of the single-population ARGweaver method and has been applied successfully to study evolution of hominins, but it is limited to small numbers of samples. Challenges remain for studying properties of tree sequences for larger sets of samples.
 
-Inference of genealogies along a chromosome is a common goal in population genetics, 
-and similar efforts have been undertaken in phylogenetics. Often, the goal of such 
-efforts is to detect signals of introgression or selection. However, the phylogenetic 
-approaches usually do not explicitly incorporate a model for recombination 
-\citep[e.g.,][]{li2019recombination}. Applications of our solutions might provide 
-valuable null hypotheses of genealogical turnover rates by which introgression or 
-selection might be detected. Beyond its use for detecting patterns resulting from 
-non-neutral processes, incorporating recombination in phylogenetic-scale models 
-could also help improve species tree inference. For example, to the extent that 
-they are observable, the empirical distribution of waiting distances to topology 
-changes might be inferred and compared against the expected waiting distances for 
-a proposed species tree model (e.g., \textbf{Figure 5}). Further approaches could 
-determine the distribution of waiting distances to specific types of topology 
-changes, such as those that split up a focal clade.
-
-
-Topological gravity wells. Even in the case of a neutral coalescent process 
+Rather than inferring the species tree model, many modern genomic methods aim to 
+infer ARGs for analyzing local patterns along the genome \citep{rasmussen2014genome, hubisz2020inference, kelleher2019inferring, speidel2019method}.
+In phylogenetics, the goal of such 
+efforts is often to detect signals of introgression or selection. 
+However, even in the case of a neutral coalescent process 
 with constant effective populations sizes and constant recombination rate 
 across the span of a genome, highly structured demographic models can exhibit
 high spatial variance in the expected waiting distances until topology changes. 
 This finding is particularly important for the practice of identifying evidence 
 of selection or introgression based on the spatial distribution of gene tree 
-patterns. Examples: Heliconius. 
+patterns. For example, sliding-window analyses for detecting introgression have 
+been used to identify putatively introgressed loci in \emph{Heliconius} 
+butterflies \citep{zhang2016genome} and felids \citep{li2019recombination}. 
+Our results here highlight the fact that demographic history plays an 
+important role in establishing a null hypothesis for the expected rate 
+of turnover of genealogies along the genome.
+
+Finally, since we are able to calculate the likelihood of observing any set of waiting 
+distances associated with an ARG, we speculate that incorporating our waiting distance 
+expectations could assist in ARG inference by extending existing methods such as ARGweaver and ARGweaver-D. 
+
+%Beyond its use for detecting patterns resulting from 
+%non-neutral processes, incorporating recombination in phylogenetic-scale models 
+%could also help improve species tree inference. For example, to the extent that 
+%they are observable, the empirical distribution of waiting distances to topology 
+%changes might be inferred and compared against the expected waiting distances for 
+%a proposed species tree model (e.g., \textbf{Figure 5}). Further approaches could 
+%determine the distribution of waiting distances to specific types of topology 
+%changes, such as those that split up a focal clade.
+
+
+%Topological gravity wells. 
+%Even in the case of a neutral coalescent process 
+%with constant effective populations sizes and constant recombination rate 
+%across the span of a genome, highly structured demographic models can exhibit
+%high spatial variance in the expected waiting distances until topology changes. 
+%This finding is particularly important for the practice of identifying evidence 
+%of selection or introgression based on the spatial distribution of gene tree 
+%patterns. For example, sliding-window analyses for detecting introgression have 
+%been used to identify putatively introgressed loci in \emph{Heliconius} butterflies \citep{zhang2016genome}. 
+%Our results here highlight the fact that the demographic history of this group is 
+%important for establishing a null hypothesis for the expected rate of turnover of genealogies along the genome.
+
+%Examples: Heliconius. 
 
 
 
