changed references to bias analysis to point to supplementary information. Might still need to add a sentence to discussion to talk about smc vs full coalescent with recomb

--- a/manuscript/waiting-distances.tex
+++ b/manuscript/waiting-distances.tex
@@ -1692,7 +1692,7 @@ This problem similarly arises in a single population model,
 where \citet{deng_distribution_2021} have previously
 demonstrated that its effect can likely be ignored. We 
 re-examine this potential bias with respect to the presence
-of population structure in our validations below.
+of population structure in our validations in the Supplementary Information.
 
 % This is because the product of $L(\mathcal{G})$ and 
 % the probability of a topology-changing recombination event
@@ -1780,8 +1780,8 @@ jit-compilation with \emph{numba} \citep{lam2015numba}, and tree operations
 with \emph{toytree} \citep{eaton_toytree_2020}.
 Below we explore the influence of MSC model parameters on waiting distances, 
 we validate our solutions against expectations from coalescent simulations 
-implemented in \emph{ipcoal} and \emph{msprime} \citep{baumdicker_efficient_2022},
-and we investigate potential biases.
+implemented in \emph{ipcoal} and \emph{msprime} \citep{baumdicker_efficient_2022}.
+%and we investigate potential biases.
 % models, visualizing results, and validating our equations.
 Source code is available at \url{https://github.com/eaton-lab/ipcoal}.
 Jupyter notebooks demonstrating the MS-SMC' calculations and with 
